Eliminacion de heroe Completada

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,3 +52,14 @@ body {
     outline: none;
     padding: 10px;
 }
+
+.modal-info {    
+    background: white;
+    border-radius: 5px;
+    color: rgb(51, 51, 51);
+    display: inline;
+    max-height: 70%;
+    max-width: 80%;
+    outline: none;
+    padding: 10px;
+}
