Mejorar el diseño

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,18 @@ body {
     max-height: 300px;
 }
 
+.card {
+    padding: 0;
+    width: 180px;
+}
+.card-img {
+    height: 100px;
+    padding: 0px 30px;
+}
+.card-text {
+    font-size: 12px;
+}
+
 .main-seccion {
     margin: 0 auto;
     padding: 0;
