--- a/src/styles.css
+++ b/src/styles.css
@@ -65,13 +65,13 @@ body {
     padding: 10px;
 }
 
-.modal-info {    
+.modal-info {
+    align-items: center;    
     background: white;
     border-radius: 5px;
     color: rgb(51, 51, 51);
     display: inline;
-    max-height: 70%;
-    max-width: 80%;
+    width: 500px;
     outline: none;
     padding: 10px;
 }
