--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,9 @@ body {
     color: aliceblue;
 }
 .container {
-    max-width: 90%;
-    max-height: 300px;
+    margin: 0%;
+    max-width: 80%;
+    max-height: 80%;
 }
 
 .card {
@@ -44,6 +45,10 @@ body {
     right: 0;
     top: 0;
     position: fixed;
+}
+
+.list-group {    
+    border-radius: 5px;
 }
 
 .ReactModalPortal .ReactModal__Overlay--after-open {
